syntax = "proto3";

option go_package = "./proto";

service InventoryService {
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
}

message GetProductsRequest {
    int32 UserID = 1;
}

message Product {
    string brand_name = 1;
    string category_name = 2;
    string product_name = 3;
    string description = 4;
    string size = 5;
    string color = 6;
    int32 quantity = 7;
    string created_at = 8;
    string updated_at = 9;
}

message GetProductsResponse {
    repeated Product products = 1;
}